initial template done

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,12 +1,11 @@
 ---
-import Layout from '../layouts/BlogPost.astro';
+import Layout from '../layouts/ProjectsLayout.astro';
 ---
 
 <Layout
 	title="About Me"
 	description="About Me defaut image"
 	pubDate={new Date('August 19 2024')}
-	heroImage="/blog-placeholder-about.jpg"
 >
 	<p>
 		I am Bernard, a software developer, sharing my experience, and my process of learning rust.
