--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -25,17 +25,12 @@ const today = new Date();
 		<a href="https://judge.beecrowd.com/pt/profile/774715" target="_blank">
 			Beecrowd
 		</a>
-		
-		
-		
-
 	</div>
 </footer>
 <style>
 	footer {
-		padding: 2em 1em 6em 1em;
-		background: linear-gradient(var(--gray-gradient)) no-repeat;
-		color: rgb(var(--gray));
+		padding: 1em;
+		color: white;
 		text-align: center;
 	}
 	.social-links {
