--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,10 @@
 import Layout from "../layouts/ContentLayout.astro";
 ---
 
-<Layout>
+<Layout 
+	title="Home" 
+	description="Home"
+	pubDate={new Date('August 19 2024')}
+>
 	<p>Welcome to my site.</p>
 </Layout>
