--- a/src/layouts/ContentLayout.astro
+++ b/src/layouts/ContentLayout.astro
@@ -2,10 +2,31 @@
 import Header from '../components/Header.astro';
 import Sidebar from '../components/Sidebar.astro';
 import Footer from '../components/Footer.astro';
+import BaseHead from '../components/BaseHead.astro';
 import '../styles/global.css';
+import type { CollectionEntry } from 'astro:content';
+type Props = CollectionEntry<'blog'>['data'];
+
+const { title, description } = Astro.props;
 ---
 
 <html lang="pt-BR">
+	<head>
+		<BaseHead title={title} description={description} />
+		<style>
+			.prose {
+				margin: 0;
+			}
+			.title {
+				margin-bottom: 1em;
+				text-align: center;
+				line-height: 1;
+			}
+			.title h1 {
+				margin: 0 0 0.5em 0;
+			}
+		</style>
+	</head>
 	<body>
 		<Header />
 		<div style="display: flex;">
