inicio dos projetos

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -8,13 +8,13 @@ import Layout from '../layouts/ProjectsLayout.astro';
 	pubDate={new Date('August 19 2024')}
 >
 	<div class="projects-container">
-		<div class="project-item">
-			<h2>Projeto 1</h2>
-			<p>Descrição do projeto 1</p>
+		<div class="project-item" onclick="window.location.href='/projects/bingo'">
+			<h2>Bingo</h2>
+			<p>Tela para bingo caseiro</p>
 		</div>
 		<div class="project-item">
-			<h2>Projeto 2</h2>
-			<p>Descrição do projeto 2</p>
+			<h2>Math Game</h2>
+			<p>Jogo de matemática</p>
 		</div>
 	</div>
 </Layout>
