--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -34,7 +34,7 @@ main {
 	background: rgb(45, 61, 101);
 	color: rgb(var(--white));
 	margin: 0 0;
-	padding: 3em 1em;
+	padding: 2px 20px 20px 10px;
 }
 strong,
 b {
